<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="title">問題調查報告</string>
    <string name="question">What do you like ?</string>
	<string name="eat">吃飯</string>
	<string name="sleep">睡覺</string>
	<string name="dota">Dota</string>
	<string name="result">結果:</string>
	
	<string name="sex">性別:</string>
	<string name="male">男</string>
	<string name="female">女</string>
	
	
</resources>